--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
     "ngx-bootstrap": "^6.2.0",
+    "primeicons": "^4.1.0",
+    "primeng": "^11.4.0",
     "prism-themes": "^1.5.0",
     "prismjs": "^1.22.0",
     "rxjs": "^6.6.3",
